--- a/index.css
+++ b/index.css
@@ -9655,6 +9655,11 @@ h3 {
     border-color: #dee2e6;
   }
 }
+* {
+  padding: 0;
+  margin: 0;
+}
+
 html {
   font-size: 65%;
 }
@@ -9664,6 +9669,24 @@ html {
     font-size: 80%;
   }
 }
+@media (min-width: 600px) {
+  .big-wrapper {
+    margin: 0px 2rem !important;
+  }
+}
+@media (max-width: 600px) {
+  html {
+    font-size: 50%;
+  }
+
+  .wrapper {
+    margin-bottom: 3rem;
+  }
+}
+.wrapper {
+  padding: 2rem 0;
+}
+
 .navbar-nav {
   width: 100%;
   font-weight: 200;
@@ -9702,11 +9725,16 @@ body {
   font-weight: 400;
 }
 
+.big-wrapper {
+  margin: 0 0;
+}
+
 .wrapper-1 {
   background: #fafafa;
   background-image: url("./images/img-1.jpg ");
-  background-size: cover;
-  background-position: center;
+  background-size: 100% 85%;
+  background-position: bottom;
+  background-repeat: no-repeat;
   height: 45rem;
 }
 .wrapper-1 p {
@@ -9749,6 +9777,34 @@ body {
 }
 .wrapper-5 p {
   font-size: 1.4rem;
+}
+.wrapper-5 .novo {
+  font-size: 1.4rem;
+}
+
+#finale {
+  background: #fafafa;
+  font-size: 1.2rem;
+}
+#finale .line {
+  height: 1px;
+  background: #d1d0cd;
+}
+#finale ul {
+  list-style: none;
+}
+#finale a {
+  color: #515154;
+}
+#finale .finale-bottom {
+  color: #515154;
+}
+#finale .barra {
+  color: #d1d0cd;
+}
+
+.nav-bottom {
+  width: 80%;
 }
 
 @font-face {
