--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,5 +1,8 @@
 @import '../node_modules/bootstrap/scss/bootstrap';
-
+*{
+    padding: 0;
+    margin: 0;
+}
 html{
     font-size:65%;
 }
@@ -9,14 +12,31 @@ html{
         font-size:80%;
     }
 }
+@media (min-width:600px){
+    .big-wrapper{
+        margin: 0px 2rem !important;
+    }
+}
 
+@media (max-width:600px){
+    html{
+        font-size:50%;
+    }
+    .wrapper{
+        margin-bottom:3rem;
+    }
+    
+    
+}
+.wrapper{
+    padding:2rem 0;
+}
 .navbar-nav{
     width: 100%;
     font-weight: 200;
     font-size:1.4rem;
 
 }
-
 
 body{
   font-family: 'SF Display';
@@ -56,13 +76,16 @@ body{
 .font-bold{
     font-weight: 400;
 }
+.big-wrapper{
+    margin: 0 0;
+}
 
 .wrapper-1{
     background: #fafafa;
     background-image: url('./images/img-1.jpg ');
-    background-size: cover;
-    background-position: center;
-
+    background-size: 100% 85%;
+    background-position: bottom;
+    background-repeat: no-repeat;
     height: 45rem;
 
     p{
@@ -109,7 +132,37 @@ body{
 
     p{
      font-size: 1.4rem;
-}}
+     }
+    .novo{
+        font-size: 1.4rem;
+    }
+    }
+
+#finale{
+    background: #fafafa;
+    .line{
+      height: 1px;
+      background:#d1d0cd;
+    }
+    font-size: 1.2rem;
+    ul{
+        list-style: none;
+    }
+    a{
+     color: #515154;
+    }
+
+    .finale-bottom{
+        color: #515154;
+    }
+    .barra{
+        color:#d1d0cd
+    }
+}
+.nav-bottom{
+    width: 80%;
+}
+
 @font-face {
     font-family: "SF Display";
     font-weight: 400;
